# fraktal

./: .gitignore  CMakeLists.txt  README.md  configure.sh  install.sh  make.sh  run-tests.sh  run.sh
fraktal/: CMakeLists.txt
fraktal-cli/: CMakeLists.txt
fraktal-cli/src/: main.cpp
fraktal-cli/src/utility/: argument_marshaller.hpp  enum_length.hpp  enum_to_string.hpp  fractal_type.hpp
fraktal/src/: fern.cpp  fern.hpp  fractal.cpp  fractal.hpp  fraktal.hpp
fraktal/src/dummy/: dummy.cpp
fraktal/src/fern/: fern.cpp  fern.hpp
fraktal/src/mandelbrot/: mandelbrot.cpp  mandelbrot.hpp
fraktal/src/utility/: binary_writer.hpp  matrix2d.hpp
fraktal/test/: main.cpp
